syntax = "proto3";

package chat.v1;

option go_package = "github.com/studyguides-com/study-guides-api/api/v1/chat;chatv1";


message Context {
  string user_id = 1;
  string session_id = 2;
  map<string, string> metadata = 3;
}

message ChatRequest {
  Context context = 1; // Who's asking
  string message = 2;  // User's plain text question
}


message ChatResponse {
  Context context = 1;          // Echo original context for trace
  string operation = 2;         // What the LLM classified this as
  map<string, string> parameters = 3; // Any parameters (e.g., timeframe)
  string answer = 4;            // Final human-readable answer from your safe backend logic
  string plan_json = 5;         // (Optional) Raw plan JSON from LLM for logging/debug
}

service ChatService {
  rpc Chat(ChatRequest) returns (ChatResponse);
}

